<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text= "@string/tvTitle" />

    <Button
        android:id="@+id/btnSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/secondButton" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editSTR1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/txt_edittext_hint1"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editSTR2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/txt_edittext_hint2"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:hint="@string/txt_edittext_hint3"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editNum2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:hint="@string/txt_edittext_hint4"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/txt_edittext_hint5"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/contain"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contain"
        app:icon="@android:drawable/ic_input_add" />

</LinearLayout>